# cvd-experiment-data-system

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENT_IMPLEMENTATION_BRIEF.md  AGENT_NEXT_STEP_PLAN_MVP_0_2.md  DESIGN.md  IMPLEMENTATION_GAP_REPORT_2026-04-24.md  README.md  backup.sh  cvd_experiment_data_system_design_v1.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260423_0001_create_users_table.py  20260423_0002_create_experiment_runs_table.py  20260423_0003_create_audit_events_table.py  20260423_0004_create_experiment_module_payloads_table.py  20260423_0005_create_samples_table.py  20260423_0006_create_file_assets_table.py  20260423_0007_add_vocabularies_and_file_fields.py  20260423_0008_expand_mvp_0_2_payloads.py  20260424_0009_seed_mvp_0_2_vocabularies.py  20260424_0010_add_audit_entity_composite_index.py  20260425_0011_add_sample_soft_delete_fields.py  20260428_0012_create_recipes_table.py  20260506_0013_create_field_definitions_table.py  20260506_0014_seed_field_definitions.py  20260507_0015_update_gas_label_washing_options.py  20260511_0016_update_substrate_vocabularies.py  20260512_0017_add_layer_count_and_substrate_batch_fields.py  20260513_0018_add_spin_time_field_definitions.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/commands/: create_admin.py  create_user.py  reset_password.py
backend/app/core/: __init__.py  config.py  deps.py  security.py
backend/tests/: conftest.py  test_cors.py  test_health.py
frontend/: Dockerfile  (+4 more)
(+196 files in other folders)
