[project]
name = "cvd-backend"
version = "0.1.0"
description = "Backend for the CVD experiment data capture system"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "bcrypt>=4.0.1,<5.0.0",
  "fastapi[standard]>=0.115.0,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "python-jose[cryptography]>=3.4.0,<4.0.0",
  "sqlalchemy>=2.0.40,<3.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=6.1.0,<7.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
